--- a/Dockerfile.packagebuilder
+++ b/Dockerfile.packagebuilder
@@ -1,7 +1,7 @@
-FROM golang:1.14-stretch
+FROM golang:1.15-stretch
 RUN set -ex; \
     apt update; \
-    apt install -y git make gcc time musl-dev rpm rsync alien
+    apt install -y git make gcc time musl-dev rpm rsync alien libgtk-3-dev libappindicator3-dev
 ARG GIT_COMMIT
 ARG GIT_BRANCH
 RUN git clone https://github.com/Cloud-Foundations/cloud-gate $GOPATH/src/github.com/Cloud-Foundations/cloud-gate
@@ -21,4 +21,4 @@ RUN time go get -t ./...
 COPY cloud-gate.spec-docker.patch $GOPATH/src/github.com/Cloud-Foundations/cloud-gate
 RUN patch cloud-gate.spec cloud-gate.spec-docker.patch
 RUN make rpm
-RUN alien -d -c `find /root/rpmbuild/RPMS/x86_64/ -name *.rpm`
+#RUN alien -d -c `find /root/rpmbuild/RPMS/x86_64/ -name *.rpm`
