--- a/Dockerfile.packagebuilder
+++ b/Dockerfile.packagebuilder
@@ -1,7 +1,8 @@
-FROM golang:1.17-bullseye
+FROM golang:1.18-bullseye
 RUN set -ex; \
     apt update; \
-    apt install -y git make gcc time musl-dev rpm rsync alien libgtk-3-dev libayatana-appindicator3-dev libayatana-appindicator-dev
+    apt upgrade -y; \
+    apt install -y --fix-missing git make gcc time musl-dev rpm rsync alien libgtk-3-dev libayatana-appindicator3-dev libayatana-appindicator-dev
 RUN apt search libayatana
 ARG GIT_COMMIT
 ARG GIT_BRANCH
